turtleart.lessons.turtleart.Main.Star.scala.error
Source:12: error: Unmatched closing brace '}' ignored here
}
^